# myld

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.h.in  test.sh
src/: builder.cc  builder.h  context.h  debug.h  elf-core.h  elf-util.h  elf.h  gen-elf.cc  gen-elf.h  linker.h  main.cc  myld.h  parse-elf.cc  parse-elf.h  reader.h
src/elf/: builder.h  obj-body.h  parse.h  parsed.h  reader.h  utils.h  writer.h
tests/: clean.sh  test.sh  use-ld-static.sh  use-ld.sh
tests/simple/: simple.c
tests/simple1/: build.sh  ld-build.sh  simple1.c
tests/simple2/: build.sh  ld-build.sh  simple2.c
tests/simple3/: build.sh  ld-build.sh  simple3.c  simple3.ld
tests/static1/: a.c  b.c  build.sh  ld-build.sh
tests/static2/: build.sh  hello.c  ld-build.sh  static2.c  static2.ld  world.c
tests/static3/: build.sh  ld-build.sh  my_syscall.s  static2.ld  static3.c
